# genesis-preflight

./: Cargo.toml  README.md
docs/: DEVELOPMENT.md  algorithms.md  architecture.md  examples.md  fair-principles.md  output-formats.md
scripts/: build-release.sh  test-all.sh
src/: lib.rs  main.rs
src/analyzer/: binary.rs  csv.rs  inference.rs  json.rs  mod.rs  text.rs
src/crypto/: mod.rs  sha256.rs
src/generator/: datacard.rs  manifest.rs  metadata_json.rs  mod.rs  readme.rs  schema.rs
src/reporter/: json_report.rs  mod.rs  score.rs  terminal.rs
src/scanner/: directory.rs  file_info_builder.rs  mod.rs
src/types/: analysis.rs  column_type.rs  config.rs  file_info.rs  file_type.rs  mod.rs  validation_result.rs
src/validator/: content.rs  data_quality.rs  fair.rs  integrity.rs  metadata.rs  mod.rs  naming.rs  structure.rs
tests/: integration_tests.rs
tests/fixtures/invalid_dataset/: readme.txt
tests/fixtures/partial_dataset/: README.md
tests/fixtures/valid_dataset/: README.md  metadata.json
tests/fixtures/valid_dataset/data/: measurements.csv
tests/integration/: generate_test.rs  mod.rs  scan_test.rs  validate_test.rs
